@@ -26,6 +26,7 @@ Improved ZX Desktop:
 Improved editing joystick to events/keys (allow to unasign easily)
 Improved ZX Life: allow to speed up game, fix behaviour on board limits
 Improved Trash icon
+Improved decimal precision of Basic Variables window values
 Improve code to allow compilation on other Unix systems, like AROS, FiwixOS, Sortix
 Improved debug cpu:
 - Show when registers values are modified by last opcode execution
